@@ -418,6 +418,14 @@
 			} else
 				$query = $this->dao->makeSelectHead();
 			
+			return $this->fillSelectQuery($query);
+		}
+		
+		/**
+		 * @return SelectQuery
+		**/
+		public function fillSelectQuery(SelectQuery $query)
+		{
 			$query->
 				limit($this->limit, $this->offset)->
 				setFetchStrategyId($this->strategy->getId());
@@ -442,7 +450,7 @@
 			) {
 				$this->joinProperties($query, $this->dao, $this->dao->getTable(), true);
 			}
-
+			
 			return $query;
 		}
 		
