@@ -34,16 +34,7 @@
 					from($this->getTable());
 				
 				if ($criteria = $info['criteria']) {
-					
-					if ($criteria->getLogic()->getSize())
-						$query->andWhere(
-							$criteria->getLogic()->toMapped($this, $query)
-						);
-						
-					if ($criteria->getOrder()->getCount())
-						$query->setOrderChain(
-							$criteria->getOrder()->toMapped($this, $query)
-						);
+					$query = $criteria->fillSelectQuery($query);
 				}
 				
 				$proto = reset($list)->proto();
